<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.details.StationDetailsActivity">

    <TextView
        android:id="@+id/stationName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium"
        android:layout_marginHorizontal="@dimen/xxtra_large"
        android:textColor="@color/text_color"
        android:textSize="@dimen/font_title"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/bikesInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stationName">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/mechanicalBikes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium"
                android:drawablePadding="@dimen/medium"
                android:gravity="center_vertical"
                android:textColor="@color/green"
                android:textSize="@dimen/font_big_title"
                app:drawableStartCompat="@drawable/meca_bike"
                app:drawableTint="@color/green"
                app:layout_constraintEnd_toStartOf="@id/electricalBikes"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/electricalBikes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium"
                android:drawablePadding="@dimen/medium"
                android:gravity="center_vertical"
                android:textColor="@color/dark_blue"
                android:textSize="@dimen/font_big_title"
                app:drawableStartCompat="@drawable/elec_bike"
                app:drawableTint="@color/dark_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/mechanicalBikes"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/places"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium"
                android:layout_marginBottom="@dimen/medium"
                android:drawablePadding="@dimen/medium"
                android:gravity="center_vertical"
                android:textColor="@color/blue"
                android:textSize="@dimen/font_big_title"
                app:drawableStartCompat="@drawable/parking"
                app:drawableTint="@color/blue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mechanicalBikes" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/infoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium"
        android:layout_marginTop="@dimen/medium"
        android:text="@string/station_details_info_title"
        android:textColor="@color/text_color"
        android:textSize="@dimen/font_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bikesInfo" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/infoTitle">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/addressTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium"
                android:layout_marginTop="@dimen/medium"
                android:text="@string/station_details_address_title"
                android:textColor="@color/text_color"
                android:textSize="@dimen/font_regular"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:layout_marginStart="@dimen/medium"
                android:layout_marginEnd="@dimen/large"
                android:textSize="@dimen/font_small"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addressTitle" />

            <TextView
                android:id="@+id/openTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium"
                android:layout_marginTop="@dimen/medium"
                android:text="@string/station_details_open"
                android:textColor="@color/text_color"
                android:textSize="@dimen/font_regular"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/address" />

            <TextView
                android:id="@+id/open"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium"
                android:layout_marginEnd="@dimen/medium"
                android:textColor="@color/green"
                android:textSize="@dimen/font_regular"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/address" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium"
                android:layout_marginTop="@dimen/medium"
                android:layout_marginBottom="@dimen/medium"
                android:text="@string/station_details_banking"
                android:textColor="@color/text_color"
                android:textSize="@dimen/font_regular"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/openTitle" />

            <TextView
                android:id="@+id/banking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium"
                android:layout_marginEnd="@dimen/medium"
                android:textColor="@color/green"
                android:textSize="@dimen/font_regular"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/openTitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/itineraryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/large"
        android:layout_marginBottom="@dimen/large"
        android:src="@drawable/ic_itinerary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/station_details_floating" />

</androidx.constraintlayout.widget.ConstraintLayout>